--- a/index.html
+++ b/index.html
@@ -1,10 +1,160 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pitch Stats</title>
-  </head>
-  <body>
-    <h1>Trackman Pitch Stats Viewer</h1>
-    <a href="details.html">Pitch 12345</a>
-  </body>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        h1 {
+            color: red;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+        .blue {
+            background-color: #e7f3fe;
+        }
+        tr:hover {
+            background-color: #f1f1f1;
+        }
+    </style>
+</head>
+<body>
+    <h1 class="red">Trackman Pitch Stats Viewer</h1>
+    <form onsubmit="downloadData(); return false;">
+        <label for="startdate">Starting Date</label>
+        <input type="date" id="startdate" name="startdate" />
+        <label for="enddate">Ending Date</label>
+        <input type="date" id="enddate" name="enddate" />
+        <button type="submit">Filter</button>
+    </form>
+    <table class="blue">
+        <thead>
+            <tr>
+                <th>PitchNo</th>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Batter</th>
+                <th>Balls</th>
+                <th>Strikes</th>
+                <th>Outs</th>
+                <th>PitchCall</th>
+                <th>KorBB</th>
+                <th>RelSpeed</th>
+                <th>SpinRate</th>
+                <th>SpinAxis</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a href="details.html">Pitch 12345</a></td>
+                <td>2024-10-09</td>
+                <td>16:00:00</td>
+                <td>John Smith</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>K</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><a href="details.html">Pitch 12346</a></td>
+                <td>2024-10-09</td>
+                <td>16:00:45</td>
+                <td>John Smith</td>
+                <td>0</td>
+                <td>1</td>
+                <td>0</td>
+                <td>K</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><a href="details.html">Pitch 12347</a></td>
+                <td>2024-10-09</td>
+                <td>16:01:30</td>
+                <td>John Smith</td>
+                <td>0</td>
+                <td>2</td>
+                <td>0</td>
+                <td>K</td>
+                <td>K</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+    <script>
+        async function downloadData() {
+            const startDate = document.getElementById('startdate').value;
+            const endDate = document.getElementById('enddate').value;
+
+            if (!startDate || !endDate) {
+                alert('Please select both start and end dates.');
+                return;
+            }
+
+            try {
+                const response = await fetch('https://example.com/api/pitches'); // Replace with your API endpoint
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                const data = await response.json();
+
+                // Filter data by date range
+                const filteredData = data.filter(pitch => {
+                    const pitchDate = new Date(pitch.Date);
+                    return pitchDate >= new Date(startDate) && pitchDate <= new Date(endDate);
+                });
+
+                populateTable(filteredData);
+            } catch (error) {
+                console.error('Error fetching data:', error);
+                alert('Failed to load data.');
+            }
+        }
+
+        function populateTable(data) {
+            const tbody = document.querySelector('table tbody');
+            tbody.innerHTML = ''; // Clear existing rows
+
+            data.forEach(row => {
+                const tr = document.createElement('tr');
+                tr.innerHTML = `
+                    <td><a href="details.html">Pitch ${row.PitchNo}</a></td>
+                    <td>${row.Date}</td>
+                    <td>${row.Time}</td>
+                    <td>${row.Batter}</td>
+                    <td>${row.Balls}</td>
+                    <td>${row.Strikes}</td>
+                    <td>${row.Outs}</td>
+                    <td>${row.PitchCall}</td>
+                    <td>${row.KorBB}</td>
+                    <td>${row.RelSpeed}</td>
+                    <td>${row.SpinRate}</td>
+                    <td>${row.SpinAxis}</td>
+                `;
+                tbody.appendChild(tr);
+            });
+        }
+    </script>
+</body>
 </html>
-<script>
