--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <h1 class="red">Trackman Pitch Stats Viewer</h1>
-    <form onsubmit="downloadData(); return false;">
+    <form onsubmit="fetchData(); return false;">
         <label for="startdate">Starting Date</label>
         <input type="date" id="startdate" name="startdate" />
         <label for="enddate">Ending Date</label>
@@ -58,52 +58,11 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><a href="details.html">Pitch 12345</a></td>
-                <td>2024-10-09</td>
-                <td>16:00:00</td>
-                <td>John Smith</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>K</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td><a href="details.html">Pitch 12346</a></td>
-                <td>2024-10-09</td>
-                <td>16:00:45</td>
-                <td>John Smith</td>
-                <td>0</td>
-                <td>1</td>
-                <td>0</td>
-                <td>K</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td><a href="details.html">Pitch 12347</a></td>
-                <td>2024-10-09</td>
-                <td>16:01:30</td>
-                <td>John Smith</td>
-                <td>0</td>
-                <td>2</td>
-                <td>0</td>
-                <td>K</td>
-                <td>K</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
+            <!-- Data rows will be inserted here dynamically -->
         </tbody>
     </table>
     <script>
-        async function downloadData() {
+        async function fetchData() {
             const startDate = document.getElementById('startdate').value;
             const endDate = document.getElementById('enddate').value;
 
@@ -113,7 +72,7 @@
             }
 
             try {
-                const response = await fetch('https://example.com/api/pitches'); // Replace with your API endpoint
+                const response = await fetch('https://compute.samford.edu/zohauth/clients/datajson/1');
                 if (!response.ok) {
                     throw new Error(`HTTP error! status: ${response.status}`);
                 }
